# fastapi-deploy-sample

./: .env.sample  README.md  Spacefile  chat.py  compose.yml  database.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml
docker/: Dockerfile  compose.yml
src/: main.py
src/api/: __init__.py
src/api/health/: __init__.py  get_ping.py
src/api/item/: __init__.py  get_item.py  post_item.py
src/db/: database.py
src/db/schemes/: item.py
src/repos/: item.py
